# TAROT

./: .gitattributes  .gitignore  README.dev.md  README.md  README.prod.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
TAROT-BACKEND/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
TAROT-BACKEND/alembic/: env.py
TAROT-BACKEND/alembic/versions/: 800357d125e5_init.py  a1b2c3d4e5f6_add_gift_enums.py  dff106583c95_init.py  e3d31034a414_init.py
TAROT-BACKEND/app/: cache.py  config.py  context.py  logger_example.py  logging_config.py  main.py  manager.py  notification_manager.py
TAROT-BACKEND/app/database/: client.py
TAROT-BACKEND/app/dependencies/: authorization.py  decode_json.py  get_current_user.py
TAROT-BACKEND/app/enums/: chat_session_status.py  chat_session_triggers.py  chat_status.py  chat_termination_reason.py  email_template_key.py  message_status.py  notification_type.py  permissions.py  role.py  transaction_status.py  transaction_type.py  user_status.py
TAROT-BACKEND/app/events/: __init__.py  types.py
TAROT-BACKEND/app/exceptions/: auth.py  categories.py  chats.py  domain.py  email.py  reviews.py  transactions.py  users.py  zodiac.py
TAROT-BACKEND/app/filters/: psychic.py
TAROT-BACKEND/app/middleware/: request_context.py
TAROT-BACKEND/app/models/: __init__.py  base.py  buy_option.py  category.py  chat.py  chat_session.py  landing_content.py  life_path_compatibility.py  life_path_number.py  message.py  notification.py  psychic_availability.py  psychic_categories.py  (+7 more)
(+338 files in other folders)
