[project]
name = "tarot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "pwdlib[argon2]",
    "uvicorn>=0.40.0",
    "fastapi-mail>=1.6.1",
    "debugpy>=1.8.19",
    "websockets>=16.0",
    "stripe>=15.1.0",
    "structlog>=25.5.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]
